Expanded fish and chips recipe
Added image, ingredients, description, and steps

--- a/recipes/fish-and-chips.html
+++ b/recipes/fish-and-chips.html
@@ -7,6 +7,37 @@
 </head>
 <body>
     <h1>Fish and Chips</h1>
-    <a href="../index.html" target="_blank" rel="noreferrer" rel="noopener">Home</a>
+    <img src="../images/Fish_and_chips_blackpool.jpg" alt="Image of fish and chips" height="640" width="640">
+    <h2>Description</h2>
+    <p>
+        Fish and chips is a classic British comfort food that pairs flaky white fish—traditionally cod
+        or haddock—dipped in a crisp, golden batter with thick-cut, fluffy-on-the-inside chips (fries). 
+        The fish is deep-fried until perfectly crunchy, while the chips are either double-fried or oven-roasted
+        for maximum texture. This hearty dish is typically served with a wedge of lemon, a sprinkle of salt and malt 
+        vinegar, and often accompanied by sides like mushy peas or tartar sauce.</p>
+    <p>
+        Beloved across the UK and beyond, fish and chips is more than just a meal—it's a nostalgic experience
+        often tied to seaside towns, paper-wrapped takeaways, and Friday night rituals. The secret to getting
+        it just right lies in a cold, fizzy batter (often with beer or soda water) and properly drained oil to 
+        keep things light, not greasy. Whether homemade or grabbed from the local chippy, it's a satisfying blend 
+        of crunch, tenderness, and savory indulgence.
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>Cod</li>
+        <li>Batter</li>
+        <li>Potatoes</li>
+        <li>Olive oil</li>
+        <li>Salt and pepper</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Prep the potatoes: Peel and cut potatoes into thick chips. Soak in cold water for at least 30 minutes to remove excess starch, then drain and pat dry thoroughly.</li>
+        <li>Make the batter: Whisk together flour, baking powder, salt, and cold beer or sparkling water until you get a smooth, thick batter. Chill the batter in the fridge while you work on the chips.</li>
+        <li>Fry the chips (first round): Heat oil to 160°C (320°F) and fry the chips in batches for 4–5 minutes, until soft but not browned. Remove and drain on paper towels.</li>
+        <li>Fry the fish: Heat the oil to 180°C (350°F). Pat the fish fillets dry, dust lightly with flour, then dip in the batter and fry until golden and crisp—about 5–7 minutes. Drain on a rack or paper towels.</li>
+        <li>Finish the chips: Return the chips to the oil at 180°C (350°F) and fry again until golden and crispy, about 2–3 minutes. Serve everything hot with lemon wedges, vinegar, and your favorite sides.</li>
+    </ol>
+    <a href="../index.html">Home</a>
 </body>
 </html>
