--- a/recipes/fish-and-chips.html
+++ b/recipes/fish-and-chips.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes | Fish and Chips</title>
 </head>
 <body>
     <h1>Fish and Chips</h1>
-    <img src="../images/Fish_and_chips_blackpool.jpg" alt="Image of fish and chips" height="640" width="640">
+    <img src="../images/Fish_and_chips_blackpool.jpg" alt="Image of fish and chips" height="320" width="480">
     <h2>Description</h2>
     <p>
         Fish and chips is a classic British comfort food that pairs flaky white fish—traditionally cod
