--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes | Home</title>
 </head>
 <body>
     <h1>Recipes</h1>
-    <a href="./recipes/fish-and-chips.html" target="_blank" rel="noreferrer" rel="noopener">Fish and Chips</a>
+    <ul>
+        <li>
+            <a href="./recipes/fish-and-chips.html" target="_blank" rel="noreferrer" rel="noopener">Fish and Chips</a>
+        </li>
+        <li>
+            <a href="./recipes/"></a>
+        </li>
+    </ul>
 </body>
 </html>
