--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
             <a href="./recipes/fish-and-chips.html" target="_blank" rel="noreferrer" rel="noopener">Fish and Chips</a>
         </li>
         <li>
-            <a href="./recipes/"></a>
+            <a href="./recipes/bangers-and-mash.html" target="_blank" rel="noreferrer" rel="noopener">Bangers and Mash</a>
+        </li>
+        <li>
+            <a href="./recipes/fish-pie.html" target="_blank" rel="noreferrer" rel="noopener">Fish Pie</a>
         </li>
     </ul>
 </body>
