--- a/index.html
+++ b/index.html
@@ -3,20 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Odin Recipes | Home</title>
 </head>
 <body>
-    <h1>Recipes</h1>
-    <ul>
-        <li>
-            <a href="./recipes/fish-and-chips.html" target="_blank" rel="noreferrer" rel="noopener">Fish and Chips</a>
-        </li>
-        <li>
-            <a href="./recipes/bangers-and-mash.html" target="_blank" rel="noreferrer" rel="noopener">Bangers and Mash</a>
-        </li>
-        <li>
-            <a href="./recipes/fish-pie.html" target="_blank" rel="noreferrer" rel="noopener">Fish Pie</a>
-        </li>
-    </ul>
+    <div class="menu">
+        <h1>Recipes</h1>
+        <ul>
+            <li>
+                <a href="./recipes/fish-and-chips.html" target="_blank" rel="noreferrer" rel="noopener">Fish and Chips</a>
+            </li>
+            <li>
+                <a href="./recipes/bangers-and-mash.html" target="_blank" rel="noreferrer" rel="noopener">Bangers and Mash</a>
+            </li>
+            <li>
+                <a href="./recipes/fish-pie.html" target="_blank" rel="noreferrer" rel="noopener">Fish Pie</a>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
